--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
         <section id="about">
             <img src="devweb.jpeg" alt="developpeur_web">
             <p>je m'appel claude j'ai 41 ans et je me reconvertis dans le monde passionnant du developpement web</p>
-            <p>j'ai commencé mon diplome depuis maintenant quelque semaine et ça confirme pour l'instant mon choix</p>
+            <p>j'ai commencé mon diplome depuis maintenant quelques semaines et ça confirme pour l'instant mon choix</p>
 
         </section>
         <section>
