--- a/portfolio.html
+++ b/portfolio.html
@@ -71,12 +71,14 @@
                 </div>
                 <div>
                     <label for="message">Message</label>
-                    <input type="textarea" id="message" name="message">
+                    <textarea id="message" name="message">
+                    </textarea>
+
+                <div>
+                    <button type="submit" value="se connecter">Envoyer</button>
                 </div>
 
-
-
-                <button type="submit" value="se connecter">Envoyer</button>
+                
             </form>
         </section>
 
